🐛 fix : 컨플릭트로 인한 StudyStatus의 잘못된 변경 복구